# langchain-opensearch

./: README.md  pyproject.toml
langchain_opensearch/: vectorstores.py
tests/: test_vectorstores.py
